--- a/that.html
+++ b/that.html
@@ -511,22 +511,22 @@ html::after {
       <div class="jeje-toto">
         <div class="toto-SLOT">
           <div class="asiasigma2-container block1">
-            <a href="#">
+            <a href="https://t.ly/3wPWn">
               <button class="asiasigma">
                 <img src="https://www.svgrepo.com/show/210421/gambler-casino.svg" width="20px">
               </button>
             </a>
-            <a href="#">
+            <a href="https://t.ly/3wPWn">
               <button class="asiasigma">
                 <img src="https://www.svgrepo.com/show/410417/mobile-casino.svg" width="20px">
               </button>
             </a>
-            <a href="#">
+            <a href="https://t.ly/3wPWn">
               <button class="asiasigma">
                 <img src="https://www.svgrepo.com/show/366709/casino.svg" width="20px">
               </button>
             </a>
-            <a href="#">
+            <a href="https://t.ly/3wPWn">
               <button class="asiasigma">
                 <img src="https://www.svgrepo.com/show/439322/slots.svg" width="20px">
               </button>
@@ -534,7 +534,7 @@ html::after {
           </div>
           <br>
           <div class="block-img">
-            <a href="#" target="_blank" rel="noopener noreferrer nofollow">
+            <a href="https://t.ly/3wPWn" target="_blank" rel="noopener noreferrer nofollow">
               <amp-img height="500" width="500" layout="responsive" alt="SLOT GACOR 2025 ~ Situs Slot Thailand Gacor Maxwin Scatter Hitam" src="https://i.postimg.cc/dVGJKLT1/imagine.jpg"></amp-img>
             </a>
           </div>
